force-app/main/default/objects/Master_Data__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Record</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Master Data</relationshipLabel>
    <relationshipName>Master_Data</relationshipName>
    <type>Lookup</type>
</CustomField>