force-app/main/default/objects/Master_Data__c/fields/PARENT_VEHICLE_TYPE_ID__c.field-meta.xml
<CustomField>
    <fullName>PARENT_VEHICLE_TYPE_ID__c</fullName>
    <label>PARENT VEHICLE TYPE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>