force-app/main/default/objects/Master_Data__c/fields/Period_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Period Date</label>
    <type>Checkbox</type>
</CustomField>