force-app/main/default/objects/Master_Data__c/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <label>Picklist Value</label>
    <type>TextArea</type>
</CustomField>