force-app/main/default/objects/Master_Data__c/fields/Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status__c</fullName>
    <label>Pipeline Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Pipeline_Status</valueSetName>
    </valueSet>
</CustomField>