force-app/main/default/objects/Master_Data__c/fields/PLANT_CODE__c.field-meta.xml
<CustomField>
    <fullName>PLANT_CODE__c</fullName>
    <externalId>true</externalId>
    <label>PLANT CODE</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>