force-app/main/default/objects/Master_Data__c/fields/Port_Code__c.field-meta.xml
<CustomField>
    <fullName>Port_Code__c</fullName>
    <externalId>true</externalId>
    <label>Port Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>