force-app/main/default/objects/Master_Data__c/fields/Port_Country_ID__c.field-meta.xml
<CustomField>
    <fullName>Port_Country_ID__c</fullName>
    <label>Port Country ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>