force-app/main/default/objects/Master_Data__c/fields/Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment__c</fullName>
    <label>Product Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Marine &amp; Financial Lines</fullName>
            </value>
            <value>
                <fullName>Special Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>