force-app/main/default/objects/Master_Data__c/fields/Proposed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Rate__c</fullName>
    <label>Proposed Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>