force-app/main/default/objects/Master_Data__c/fields/QS_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>QS_AMOUNT__c</fullName>
    <label>QS_AMOUNT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>