force-app/main/default/objects/Master_Data__c/fields/RI_PARAM_YEAR__c.field-meta.xml
<CustomField>
    <fullName>RI_PARAM_YEAR__c</fullName>
    <label>RI PARAM YEAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>