force-app/main/default/objects/Master_Data__c/fields/RISK_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>RISK_CATEGORY__c</fullName>
    <label>RISK CATEGORY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>