force-app/main/default/objects/Master_Data__c/fields/Risk_Code1__c.field-meta.xml
<CustomField>
    <fullName>Risk_Code1__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Risk Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>