force-app/main/default/objects/Master_Data__c/fields/Risk_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Risk_Location_Code__c</fullName>
    <externalId>true</externalId>
    <label>Risk Location Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>