force-app/main/default/objects/Master_Data__c/fields/Risk_Situation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Situation__c</fullName>
    <label>Risk Situation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>