force-app/main/default/objects/Master_Data__c/fields/RISK_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RISK_TYPE__c</fullName>
    <label>RISK TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Type</valueSetName>
    </valueSet>
</CustomField>