force-app/main/default/objects/Master_Data__c/fields/Round_Robin_Counter__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Counter__c</fullName>
    <label>Round Robin Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>