force-app/main/default/objects/Master_Data__c/fields/Round_Robin_Member__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round Robin Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>