force-app/main/default/objects/Master_Data__c/fields/Sales_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_ID__c</fullName>
    <label>Sales ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>