force-app/main/default/objects/Master_Data__c/fields/Sales_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Name__c</fullName>
    <label>Sales Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>