force-app/main/default/objects/Master_Data__c/fields/Salesman_Branch__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesman Branch</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Master Data (Salesman Branch)</relationshipLabel>
    <relationshipName>Master_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>