force-app/main/default/objects/Master_Data__c/fields/Salvage__c.field-meta.xml
<CustomField>
    <fullName>Salvage__c</fullName>
    <label>Salvage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>