force-app/main/default/objects/Master_Data__c/fields/Section_Cob__c.field-meta.xml
<CustomField>
    <fullName>Section_Cob__c</fullName>
    <label>Section_Cob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>