force-app/main/default/objects/Master_Data__c/fields/showData__c.field-meta.xml
<CustomField>
    <fullName>showData__c</fullName>
    <label>showData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>