force-app/main/default/objects/Master_Data__c/fields/SP1_LINES__c.field-meta.xml
<CustomField>
    <fullName>SP1_LINES__c</fullName>
    <label>SP1 LINES</label>
    <length>100</length>
    <type>Text</type>
</CustomField>