force-app/main/default/objects/Master_Data__c/fields/Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty__c</fullName>
    <label>Stamp Duty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>