force-app/main/default/objects/Master_Data__c/fields/Target_Year__c.field-meta.xml
<CustomField>
    <fullName>Target_Year__c</fullName>
    <label>Target Year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>