force-app/main/default/objects/Master_Data__c/fields/Tarif_Bawah__c.field-meta.xml
<CustomField>
    <fullName>Tarif_Bawah__c</fullName>
    <label>Tarif Bawah</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>