force-app/main/default/objects/Master_Data__c/fields/The_Insured__c.field-meta.xml
<CustomField>
    <fullName>The_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>The Insured</label>
    <type>Checkbox</type>
</CustomField>