force-app/main/default/objects/Master_Data__c/fields/TONNAGE__c.field-meta.xml
<CustomField>
    <fullName>TONNAGE__c</fullName>
    <label>TONNAGE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>