force-app/main/default/objects/Master_Data__c/fields/Total_Neto__c.field-meta.xml
<CustomField>
    <fullName>Total_Neto__c</fullName>
    <formula>Neto_Jan__c +  Neto_Feb__c +  Neto_Mar__c +  Neto_Apr__c +  Neto_May__c +  Neto_Jun__c +  Neto_Jul__c +  Neto_Aug__c +  Neto_Sep__c +  Neto_Oct__c +  Neto_Nov__c +  Neto_Dec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Neto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>