force-app/main/default/objects/Master_Data__c/fields/TREATY_YEAR__c.field-meta.xml
<CustomField>
    <fullName>TREATY_YEAR__c</fullName>
    <label>TREATY YEAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>