force-app/main/default/objects/Master_Data__c/fields/TYPE__c.field-meta.xml
<CustomField>
    <fullName>TYPE__c</fullName>
    <label>TYPE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>