force-app/main/default/objects/Master_Data__c/fields/Type_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Business__c</fullName>
    <label>Type Of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>