force-app/main/default/objects/Master_Data__c/fields/UR_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>UR_AMOUNT__c</fullName>
    <label>UR AMOUNT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>