force-app/main/default/objects/Master_Data__c/fields/USER_ID__c.field-meta.xml
<CustomField>
    <fullName>USER_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USER ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Data</relationshipName>
    <type>Lookup</type>
</CustomField>