force-app/main/default/objects/Master_Data__c/fields/USER_PIC__c.field-meta.xml
<CustomField>
    <fullName>USER_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USER PIC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Master Data</relationshipLabel>
    <relationshipName>Master_Data</relationshipName>
    <type>Lookup</type>
</CustomField>