force-app/main/default/objects/Master_Data__c/fields/VEHICLE_BRAND_ID__c.field-meta.xml
<CustomField>
    <fullName>VEHICLE_BRAND_ID__c</fullName>
    <externalId>true</externalId>
    <label>VEHICLE BRAND ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>