force-app/main/default/objects/Master_Data__c/fields/VEHICLE_SUB_TYPE__c.field-meta.xml
<CustomField>
    <fullName>VEHICLE_SUB_TYPE__c</fullName>
    <label>VEHICLE SUB TYPE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>