force-app/main/default/objects/Master_Data__c/fields/VESSELFLAG__c.field-meta.xml
<CustomField>
    <fullName>VESSELFLAG__c</fullName>
    <label>VESSELFLAG</label>
    <length>80</length>
    <type>Text</type>
</CustomField>