force-app/main/default/objects/Master_Data__c/fields/Wording__c.field-meta.xml
<CustomField>
    <fullName>Wording__c</fullName>
    <label>Wording</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>