force-app/main/default/objects/Master_Data__c/fields/ZIP_CODE__c.field-meta.xml
<CustomField>
    <fullName>ZIP_CODE__c</fullName>
    <label>ZIP CODE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>