force-app/main/default/objects/Master_Data__c/recordTypes/Administration_Cost.recordType-meta.xml
<RecordType>
    <fullName>Administration_Cost</fullName>
    <active>true</active>
    <description>Quotation purposes</description>
    <label>Administration Cost</label>
</RecordType>