force-app/main/default/objects/Master_Data__c/recordTypes/Approval_Limit.recordType-meta.xml
<RecordType>
    <fullName>Approval_Limit</fullName>
    <active>true</active>
    <description>for Underwriting and Claim</description>
    <label>Approval Limit</label>
</RecordType>