force-app/main/default/objects/Master_Data__c/recordTypes/Asset_Category.recordType-meta.xml
<RecordType>
    <fullName>Asset_Category</fullName>
    <active>true</active>
    <description>FKA Object Insured, to align with Asset Section &amp; COB</description>
    <label>Asset Category</label>
</RecordType>