force-app/main/default/objects/Master_Data__c/recordTypes/Asset_Section.recordType-meta.xml
<RecordType>
    <fullName>Asset_Section</fullName>
    <active>true</active>
    <description>Sub part of Asset Category</description>
    <label>Asset Section</label>
</RecordType>