force-app/main/default/objects/Master_Data__c/recordTypes/Cause_Of_Loss.recordType-meta.xml
<RecordType>
    <fullName>Cause_Of_Loss</fullName>
    <active>true</active>
    <label>Cause Of Loss</label>
</RecordType>