force-app/main/default/objects/Master_Data__c/recordTypes/Clause.recordType-meta.xml
<RecordType>
    <fullName>Clause</fullName>
    <active>true</active>
    <label>Clause</label>
</RecordType>