force-app/main/default/objects/Master_Data__c/recordTypes/Commodity_Type.recordType-meta.xml
<RecordType>
    <fullName>Commodity_Type</fullName>
    <active>true</active>
    <label>Commodity Type</label>
</RecordType>