force-app/main/default/objects/Master_Data__c/recordTypes/Coverage.recordType-meta.xml
<RecordType>
    <fullName>Coverage</fullName>
    <active>true</active>
    <label>Coverage</label>
</RecordType>