force-app/main/default/objects/Master_Data__c/recordTypes/Coverage_Rate.recordType-meta.xml
<RecordType>
    <fullName>Coverage_Rate</fullName>
    <active>true</active>
    <label>Coverage Rate</label>
</RecordType>