force-app/main/default/objects/Master_Data__c/recordTypes/Detail_Asset.recordType-meta.xml
<RecordType>
    <fullName>Detail_Asset</fullName>
    <active>true</active>
    <label>Detail Asset</label>
</RecordType>