force-app/main/default/objects/Master_Data__c/recordTypes/Double_Prospect.recordType-meta.xml
<RecordType>
    <fullName>Double_Prospect</fullName>
    <active>true</active>
    <label>Double Prospect</label>
</RecordType>