force-app/main/default/objects/Master_Data__c/recordTypes/Exchange_Rate.recordType-meta.xml
<RecordType>
    <fullName>Exchange_Rate</fullName>
    <active>true</active>
    <label>Exchange Rate</label>
</RecordType>