force-app/main/default/objects/Master_Data__c/recordTypes/Exposure.recordType-meta.xml
<RecordType>
    <fullName>Exposure</fullName>
    <active>true</active>
    <description>Supplemental data for Product Information</description>
    <label>Exposure</label>
</RecordType>