force-app/main/default/objects/Master_Data__c/recordTypes/Facultative_User_Limit.recordType-meta.xml
<RecordType>
    <fullName>Facultative_User_Limit</fullName>
    <active>true</active>
    <label>Facultative User Limit</label>
</RecordType>