force-app/main/default/objects/Master_Data__c/recordTypes/Field_COB.recordType-meta.xml
<RecordType>
    <fullName>Field_COB</fullName>
    <active>true</active>
    <label>Field COB</label>
</RecordType>