force-app/main/default/objects/Master_Data__c/recordTypes/Filter_Policy_Distribution.recordType-meta.xml
<RecordType>
    <fullName>Filter_Policy_Distribution</fullName>
    <active>true</active>
    <label>Filter Policy Distribution</label>
</RecordType>