force-app/main/default/objects/Master_Data__c/recordTypes/Limit_Reas.recordType-meta.xml
<RecordType>
    <fullName>Limit_Reas</fullName>
    <active>true</active>
    <label>Limit Reas</label>
</RecordType>