force-app/main/default/objects/Master_Data__c/recordTypes/Loss_Object.recordType-meta.xml
<RecordType>
    <fullName>Loss_Object</fullName>
    <active>true</active>
    <description>Claim MV Loss Object</description>
    <label>Loss Object</label>
</RecordType>