force-app/main/default/objects/Master_Data__c/recordTypes/M_Business.recordType-meta.xml
<RecordType>
    <fullName>M_Business</fullName>
    <active>true</active>
    <label>M_Business</label>
</RecordType>