force-app/main/default/objects/Master_Data__c/recordTypes/M_Occupy.recordType-meta.xml
<RecordType>
    <fullName>M_Occupy</fullName>
    <active>true</active>
    <label>M_Occupy</label>
</RecordType>