force-app/main/default/objects/Master_Data__c/recordTypes/M_Port.recordType-meta.xml
<RecordType>
    <fullName>M_Port</fullName>
    <active>true</active>
    <label>M_Port</label>
</RecordType>