force-app/main/default/objects/Master_Data__c/recordTypes/Market.recordType-meta.xml
<RecordType>
    <fullName>Market</fullName>
    <active>true</active>
    <label>Market</label>
</RecordType>