force-app/main/default/objects/Master_Data__c/recordTypes/Master_Branch.recordType-meta.xml
<RecordType>
    <fullName>Master_Branch</fullName>
    <active>true</active>
    <label>Master Branch</label>
</RecordType>