force-app/main/default/objects/Master_Data__c/recordTypes/Master_Policy_Wording.recordType-meta.xml
<RecordType>
    <fullName>Master_Policy_Wording</fullName>
    <active>true</active>
    <label>Master Policy Wording</label>
</RecordType>