force-app/main/default/objects/Master_Data__c/recordTypes/Other_Expenses.recordType-meta.xml
<RecordType>
    <fullName>Other_Expenses</fullName>
    <active>true</active>
    <description>Quotation purposes for Administration Cost &amp; Stamp Duty</description>
    <label>Other Expenses</label>
</RecordType>