force-app/main/default/objects/Master_Data__c/recordTypes/Policy_Distribution.recordType-meta.xml
<RecordType>
    <fullName>Policy_Distribution</fullName>
    <active>true</active>
    <label>Policy Distribution</label>
</RecordType>