force-app/main/default/objects/Master_Data__c/recordTypes/Risk_Code.recordType-meta.xml
<RecordType>
    <fullName>Risk_Code</fullName>
    <active>true</active>
    <label>Risk Code</label>
</RecordType>