force-app/main/default/objects/Master_Data__c/recordTypes/Risk_Location.recordType-meta.xml
<RecordType>
    <fullName>Risk_Location</fullName>
    <active>true</active>
    <label>Risk Location</label>
</RecordType>