force-app/main/default/objects/Master_Data__c/recordTypes/Round_Robin_Member.recordType-meta.xml
<RecordType>
    <fullName>Round_Robin_Member</fullName>
    <active>true</active>
    <label>Round Robin Member</label>
</RecordType>