force-app/main/default/objects/Master_Data__c/recordTypes/Round_Robin_Member_Account_Matrix.recordType-meta.xml
<RecordType>
    <fullName>Round_Robin_Member_Account_Matrix</fullName>
    <active>true</active>
    <label>Round Robin Member Account Matrix</label>
</RecordType>