force-app/main/default/objects/Master_Data__c/recordTypes/Stamp_Duty.recordType-meta.xml
<RecordType>
    <fullName>Stamp_Duty</fullName>
    <active>true</active>
    <description>Quotation purposes</description>
    <label>Stamp Duty</label>
</RecordType>