force-app/main/default/objects/Master_Data__c/recordTypes/Treaty_Capacity.recordType-meta.xml
<RecordType>
    <fullName>Treaty_Capacity</fullName>
    <active>true</active>
    <label>Treaty Capacity</label>
</RecordType>