force-app/main/default/objects/Master_Data__c/recordTypes/Type_of_Plant.recordType-meta.xml
<RecordType>
    <fullName>Type_of_Plant</fullName>
    <active>true</active>
    <label>Type of Plant</label>
</RecordType>