force-app/main/default/objects/Master_Data__c/recordTypes/User_Limit.recordType-meta.xml
<RecordType>
    <fullName>User_Limit</fullName>
    <active>true</active>
    <label>User Limit</label>
</RecordType>