force-app/main/default/objects/Master_Data__c/recordTypes/Vehicle_Brand.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Brand</fullName>
    <active>true</active>
    <label>Vehicle Brand</label>
</RecordType>