force-app/main/default/objects/Master_Data__c/recordTypes/Vehicle_Type.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Type</fullName>
    <active>true</active>
    <label>Vehicle Type</label>
</RecordType>