force-app/main/default/objects/Master_Data__c/recordTypes/Vessel_Name.recordType-meta.xml
<RecordType>
    <fullName>Vessel_Name</fullName>
    <active>true</active>
    <label>Vessel Name</label>
</RecordType>