force-app/main/default/objects/Master_Data__c/listViews/Approval_Limit_Claim.listView-meta.xml
<ListView>
    <fullName>Approval_Limit_Claim</fullName>
    <columns>External_ID__c</columns>
    <columns>USER_ID__c</columns>
    <columns>NAME</columns>
    <columns>BSN_ID__c</columns>
    <columns>AUTHORITY_TYPE__c</columns>
    <columns>CURRENCY_CODE__c</columns>
    <columns>LIMIT_AMOUNT__c</columns>
    <columns>BRANCH_ID__c</columns>
    <columns>RISK_CODE__c</columns>
    <columns>AGE__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Approval_Limit</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Approval Limit Claim</label>
</ListView>