force-app/main/default/objects/Master_Data__c/listViews/BSN_201.listView-meta.xml
<ListView>
    <fullName>BSN_201</fullName>
    <columns>BSN_ID__c</columns>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Order__c</columns>
    <columns>Description__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BSN_ID__c</field>
        <operation>equals</operation>
        <value>201</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Coverage</value>
    </filters>
    <label>Coverage BSN 201</label>
</ListView>