force-app/main/default/objects/Master_Data__c/listViews/BSN_301.listView-meta.xml
<ListView>
    <fullName>BSN_301</fullName>
    <columns>NAME</columns>
    <columns>COVERAGE_REF_ID__c</columns>
    <columns>PARENT_COVERAGE_ID__c</columns>
    <columns>BSN_ID__c</columns>
    <columns>COVERAGE_DESCRIPTION__c</columns>
    <columns>Coverage_301__c</columns>
    <columns>Asset_Section__c</columns>
    <columns>Asset_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Coverage</value>
    </filters>
    <filters>
        <field>BSN_ID__c</field>
        <operation>equals</operation>
        <value>301</value>
    </filters>
    <label>Coverage BSN 301</label>
</ListView>