force-app/main/default/objects/Master_Data__c/listViews/Business.listView-meta.xml
<ListView>
    <fullName>Business</fullName>
    <columns>NAME</columns>
    <columns>ext_id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.M_Business</value>
    </filters>
    <label>Business</label>
</ListView>