force-app/main/default/objects/Master_Data__c/listViews/Clause.listView-meta.xml
<ListView>
    <fullName>Clause</fullName>
    <columns>Clause_Id__c</columns>
    <columns>NAME</columns>
    <columns>BSN_ID__c</columns>
    <columns>IND_NAME__c</columns>
    <columns>ENG_NAME__c</columns>
    <columns>IND_DESC__c</columns>
    <columns>ENG_DESC__c</columns>
    <columns>ENG_DESC_CL__c</columns>
    <columns>Is_Default__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Clause</value>
    </filters>
    <filters>
        <field>BSN_ID__c</field>
        <operation>equals</operation>
        <value>301</value>
    </filters>
    <filters>
        <field>Is_Default__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Clause</label>
</ListView>