force-app/main/default/objects/Master_Data__c/listViews/Clause_Of_Loss.listView-meta.xml
<ListView>
    <fullName>Clause_Of_Loss</fullName>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <columns>Content__c</columns>
    <columns>BSN_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Cause_Of_Loss</value>
    </filters>
    <label>Cause Of Loss</label>
</ListView>