force-app/main/default/objects/Master_Data__c/listViews/Commodity_Type.listView-meta.xml
<ListView>
    <fullName>Commodity_Type</fullName>
    <columns>ext_id__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Commodity_Type</value>
    </filters>
    <label>Commodity Type</label>
</ListView>