force-app/main/default/objects/Master_Data__c/listViews/Detail_Asset.listView-meta.xml
<ListView>
    <fullName>Detail_Asset</fullName>
    <columns>BSN_ID__c</columns>
    <columns>Section__c</columns>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Detail_Asset</value>
    </filters>
    <label>Detail Asset</label>
</ListView>