force-app/main/default/objects/Master_Data__c/listViews/Double_Prospect.listView-meta.xml
<ListView>
    <fullName>Double_Prospect</fullName>
    <columns>NAME</columns>
    <columns>BSN_ID__c</columns>
    <columns>Risk_Description__c</columns>
    <columns>Risk_Situation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Double_Prospect</value>
    </filters>
    <label>Double Prospect</label>
</ListView>