force-app/main/default/objects/Master_Data__c/listViews/Exchange_Rate.listView-meta.xml
<ListView>
    <fullName>Exchange_Rate</fullName>
    <columns>RI_PARAM_YEAR__c</columns>
    <columns>NAME</columns>
    <columns>Exchange_Rate__c</columns>
    <columns>CREATED_DATE__c</columns>
    <columns>DEST_CUR_CODE__c</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Exchange_Rate</value>
    </filters>
    <label>Exchange Rate</label>
</ListView>