force-app/main/default/objects/Master_Data__c/listViews/Limit_Reas.listView-meta.xml
<ListView>
    <fullName>Limit_Reas</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.Limit_Reas</value>
    </filters>
    <label>Limit Reas</label>
</ListView>