force-app/main/default/objects/Master_Data__c/listViews/M_Occupy.listView-meta.xml
<ListView>
    <fullName>M_Occupy</fullName>
    <columns>NAME</columns>
    <columns>Occupy_Id__c</columns>
    <columns>External_ID__c</columns>
    <columns>Parent_Id__c</columns>
    <columns>Description__c</columns>
    <columns>Construction_Class_Rate_1__c</columns>
    <columns>Construction_Class_Rate_2__c</columns>
    <columns>Construction_Class_Rate_3__c</columns>
    <columns>Is_Industry__c</columns>
    <columns>Is_Niaga__c</columns>
    <columns>IS_DETAIL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Data__c.M_Occupy</value>
    </filters>
    <label>M_Occupy</label>
</ListView>